<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>jmeter.plugins.ulbobservatory.sampler</groupId>
		<artifactId>ulp-observability</artifactId>
		<version>1.0.5-SNAPSHOT</version>
	</parent>
	
    <artifactId>ulp-observability-listener</artifactId>
    <name>ULP Observatory Sampler as JMeter plugin</name>

  <properties>
  	<java.version>11</java.version>
	<maven.compiler.source>11</maven.compiler.source>
	<maven.compiler.target>11</maven.compiler.target>
	<micrometer.version>1.10.3</micrometer.version>
	<jetty.version>11.0.13</jetty.version>
	<jackson.version>2.10.5</jackson.version>
	<jmeter.version>5.4.1</jmeter.version>
  </properties>

 <dependencies>
	 <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.9.2</version>
	    <scope>test</scope>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
	<dependency>
	    <groupId>org.freemarker</groupId>
	    <artifactId>freemarker</artifactId>
	    <version>2.3.32</version>
	    <scope>test</scope>
	</dependency>

	
	<dependency>
	    <groupId>org.mockito</groupId>
	    <artifactId>mockito-core</artifactId>
	    <version>5.3.1</version>
	    <scope>test</scope>
	</dependency>
 
   <dependency>
     <groupId>org.apache.jmeter</groupId>
     <artifactId>ApacheJMeter_core</artifactId>
     <version>${jmeter.version}</version>
     <scope>provided</scope>
   </dependency>
   
    <dependency>
      <groupId>org.apache.jmeter</groupId>
      <artifactId>jorphan</artifactId>
      <version>${jmeter.version}</version>
    </dependency>
    
   <dependency>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-api</artifactId>
     <version>1.7.36</version>
     <scope>provided</scope>
   </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.hdrhistogram/HdrHistogram -->
	<dependency>
	    <groupId>org.hdrhistogram</groupId>
	    <artifactId>HdrHistogram</artifactId>
	    <version>2.1.12</version>
	</dependency>
	
	
	<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
	<dependency>
	    <groupId>org.eclipse.jetty</groupId>
	    <artifactId>jetty-server</artifactId>
	    <version>${jetty.version}</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet -->
	<dependency>
	    <groupId>org.eclipse.jetty</groupId>
	    <artifactId>jetty-servlet</artifactId>
	    <version>${jetty.version}</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlets -->
	<dependency>
	  <groupId>org.eclipse.jetty</groupId>
	  <artifactId>jetty-servlets</artifactId>
	  <version>${jetty.version}</version>
	</dependency>
	
	<dependency>
		<groupId>org.eclipse.jetty</groupId>
		<artifactId>jetty-webapp</artifactId>
		<version>${jetty.version}</version>
	</dependency>
	
	<dependency>
	  <groupId>io.micrometer</groupId>
	  <artifactId>micrometer-core</artifactId>
	  <version>${micrometer.version}</version>
	</dependency>
    
    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>${jackson.version}</version>
	</dependency>
	
	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-lang3</artifactId>
		<version>3.12.0</version>
	</dependency>
	
	<dependency>
	  <groupId>io.timeandspace</groupId>
	  <artifactId>cron-scheduler</artifactId>
	  <version>0.1</version>
	</dependency>

</dependencies>

 <build>
    <plugins>   
		<plugin>
		<artifactId>maven-resources-plugin</artifactId>
		<version>3.0.2</version>
		<executions>
			<execution>
				<id>copy-resources</id>
				<phase>process-resources</phase>
				<goals>
					<goal>copy-resources</goal>
				</goals>
				<configuration>
					<outputDirectory>${project.build.outputDirectory}/webapp</outputDirectory>
					<resources>
						<resource>
							<directory>../ulp-observability-front/src/main/front/dist/webapp</directory>
							<filtering>false</filtering>
						</resource>
					</resources>
				</configuration>
			</execution>
		</executions>
	</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>

      <plugin>
		<groupId>org.eclipse.jetty</groupId>
		<artifactId>jetty-maven-plugin</artifactId>
		<version>${jetty.version}</version>
	 </plugin>
    </plugins>
  </build>

</project>
